--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,11 @@ services:
     ports:
       - 13306:3306
     volumes:
-      - /Users/black/dev/mysql_docker/data:/var/lib/mysql:rw
-      - /Users/black/IdeaProjects/backend-preonboarding/src/main/resources/initdb:/docker-entrypoint-initdb.d
+      - /Users/jinho/dev/mysql_docker/data:/var/lib/mysql:rw
+      - /Users/jinho/IdeaProjects/tdd-starter/src/main/resources/initdb:/docker-entrypoint-initdb.d
     command:
       - '--character-set-server=utf8mb4'
       - '--collation-server=utf8mb4_unicode_ci'
     environment:
       MYSQL_ROOT_PASSWORD: preonboarding
-      MYSQL_DATABASE: wanted
+      MYSQL_DATABASE: testlabs
