ADD: ALL Example

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   profiles:
-    active: chaos-monkey
+    active: test
   datasource:
     url: jdbc:mysql://localhost:13306/testlabs
     username: fastcamp
