--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,18 @@
 services:
   mysql:
+#    user: "1000:50"
     user: 501:20
     image: mysql:8.0.33
     ports:
       - 13306:3306
     volumes:
-      - /Users/jinho/dev/mysql_docker/data:/var/lib/mysql:rw
-      - /Users/jinho/IdeaProjects/tdd-starter/src/main/resources/initdb:/docker-entrypoint-initdb.d
+      - /Users/black/IdeaProjects/fastcampus-tdd-starter/src/main/resources/initdb:/docker-entrypoint-initdb.d
+#      - /Users/black/dev/mysql_docker/data:/var/lib/mysql:rw
     command:
       - '--character-set-server=utf8mb4'
       - '--collation-server=utf8mb4_unicode_ci'
     environment:
-      MYSQL_ROOT_PASSWORD: preonboarding
       MYSQL_DATABASE: testlabs
+      MYSQL_USER: fastcamp
+      MYSQL_PASSWORD: testcode
+      MYSQL_ROOT_PASSWORD: preonboarding
